Completed styling drawer and icons in sidenav

--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -94,7 +94,7 @@
 		font-size: remCalc(32px);
 		padding: remCalc(8px);
 		width: auto;
-		hieght: auto;
+		height: auto;
 
 		@media #{$small-up} {
 			padding: remCalc(16px);
