--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -50,3 +50,9 @@ $gutter: 16px;
  * Icons
  **************************************/
 $icon-font-path: './components/fonts/icons/';
+
+/**************************************
+ * Sidenav
+ **************************************/
+$sidenav-width: 320px; // max 400px
+$sidenav-small-width: 320px; // max 320px
