--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -1,7 +1,7 @@
 .sm-appbar {
 	@extend .sm-row, .sm-z1;
-	color: $white;
-	background: $blue;
+	color: $appbar-text;
+	background: $appbar-background;
 	width: 100%;
 	height: remCalc(48px);
 	line-height: normal;
@@ -27,7 +27,7 @@
 		}
 
 		a {
-			color: $white;
+			color: $appbar-text;
 		}
 	}
 
@@ -57,7 +57,7 @@
 			margin: 0;
 			font-size: remCalc(24px);
 			font-weight: 500;
-			color: $white;
+			color: $appbar-title;
 		}
 	}
 
@@ -67,7 +67,7 @@
 			float: right;
 
 			&:hover {
-				background: $blue-700;
+				background: $appbar-hover;
 			}
 		}
 
@@ -85,7 +85,7 @@
 			float: right;
 
 			&:hover {
-				background: $blue-700;
+				background: $appbar-hover;
 			}
 		}
 	}
