Completed sidenav menu

--- a/stylesheets/scss/components/_colors.scss
+++ b/stylesheets/scss/components/_colors.scss
@@ -651,7 +651,8 @@ $colors: (
 	'deep-orange': $deep-orange-colors,
 	'brown': $brown-colors,
 	'grey': $grey-colors,
-	'blue-grey': $blue-grey-colors
+	'blue-grey': $blue-grey-colors,
+	'shades': $shades
 );
 
 // Create classes for each color
