--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -15,3 +15,4 @@
 @import 'components/icons'; // Icons with their shadow (can be turned off) http://www.google.com/design/spec/style/icons.html
 @import 'components/appbar'; // Top menu bar (can be turned off) http://www.google.com/design/spec/layout/structure.html#structure-toolbars
 @import 'components/sidenav'; // Side navigation (can be turned off) http://www.google.com/design/spec/layout/structure.html#structure-side-nav, http://www.google.com/design/spec/patterns/navigation-drawer.html#
+@import 'components/code'; // Used to highlight code (can be turned off)
