--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -4,7 +4,7 @@
  * Some may be turned off by commenting them
  **************************************/
 @import 'components/functions'; // All functions
-@import "components/mixins";
+@import 'components/mixins';
 @import 'components/colors'; // Color swatches http://www.google.com/design/spec/style/color.html
 @import 'components/settings'; // All settings
 @import 'components/grid'; // Grid functionality
