Added button components page and styled buttons

--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -1,3 +1,9 @@
+/**************************************
+ * AppBar
+ *
+ * http://www.google.com/design/spec/layout/structure.html#structure-app-bar
+ **************************************/
+
 .sm-appbar {
 	@extend .sm-row, .sm-z1;
 	color: $appbar-text;
