Changed shadows and added a few documentation pages

--- a/stylesheets/scss/components/_code.scss
+++ b/stylesheets/scss/components/_code.scss
@@ -14,6 +14,8 @@ code, pre {
 	background: $grey-300;
 	font-family: 'Source Code Pro', Monospaced;
 	padding: remCalc(5px);
+	font-size: remCalc(13px);
+	margin: 0;
 
 	pre {
 		display: block;
