--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -8,6 +8,8 @@
 
 button, input[type="button"], input[type="reset"], input[type="submit"], a {
 	&.sm-raised-button {
+		@extend .sm-z2;
+		@include transition(all, 300ms);
 		color: $raised-button-color;
 		//color: rgba($black, .87);
 		background: $raised-button-background;
@@ -22,6 +24,8 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 		display: inline-block;
 		text-align: center;
 		cursor: pointer;
+		outline: none;
+
 
 		@if( index( $roboto-font, $country-code ) ) {
 			font-size: remCalc(14px);
@@ -34,8 +38,10 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 		}
 
 		&:hover {
-			@extend .sm-z2;
+			@extend .sm-z8;
 			background: $raised-button-background-hover;
+			//background-color: rgba($black, .12);
+			color: $raised-button-color;
 		}
 
 
@@ -70,15 +76,18 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 		&-disabled {
 			background: rgba($black, .12);
 			color: rgba($black, .30);
+			@extend .sm-z0;
 
 			&:hover {
 				@extend .sm-z0;
+				color: rgba($black, .30);
 				background: rgba($black, .12);
 			}
 		}
 	}
 
 	&.sm-flat-button {
+		@include transition(all, 300ms);
 		color: $flat-button-color;
 		//color: rgba($black, .87);
 		background: none;
@@ -143,13 +152,13 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 
 button, a {
 	&.sm-floating-button {
-		@extend .sm-z1;
+		@extend .sm-z6;
+		@include transition(all);
 		border-radius: 50%;
 		border: none;
 		outline: none;
 		width: remCalc(56px);
 		height: remCalc(56px);
-		color: $floating-button-icon;
 		background: $floating-button-background;
 		text-decoration: none;
 		display: inline-block;
@@ -158,7 +167,7 @@ button, a {
 		cursor: pointer;
 
 		&:hover {
-			@extend .sm-z2;
+			@extend .sm-z12;
 		}
 
 
@@ -166,28 +175,35 @@ button, a {
 			height: remCalc(24px);
 			width: remCalc(24px);
 			vertical-align: middle;
+			color: $floating-button-icon;
 		}
 
 		&-mini {
 			width: remCalc(40px);
 			height: remCalc(40px);
 			line-height: remCalc(40px);
-
 		}
 	}
 }
 
-input[type="checkbox"].sm-icon-button {
+.sm-toggle-button {
 	border-radius: 50%;
 	border: none;
 	outline: none;
-	width: remCalc(56px);
-	height: remCalc(56px);
+	width: remCalc(40px);
+	height: remCalc(40px);
 	color: $floating-button-icon;
 	background: $floating-button-background;
 	text-decoration: none;
 	display: inline-block;
 	text-align: center;
-	line-height: remCalc(56px);
+	line-height: remCalc(40px);
 	cursor: pointer;
+
+	.material-icons {
+		height: remCalc(24px);
+		width: remCalc(24px);
+		vertical-align: middle;
+		color: $floating-button-icon;
+	}
 }
