Updated sidenav documentation, added and changed a couple mixins

--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -47,7 +47,7 @@ $sidenav-full-title-color: $white;
 
 // Buttons
 $raised-button-background: $main-color;
-$raised-button-background-hover: $blue-a100;
+$raised-button-background-hover: $main-color;
 $raised-button-color: $white;
 $raised-icon-color: $white;
 
