--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
 button, input[type="button"], input[type="reset"], input[type="submit"], a {
 	&.sm-raised-button {
 		@extend .sm-z2;
-		@include transition(all, 300ms);
+		@include transition(all 100ms ease-in-out);
 		color: $raised-button-color;
 		//color: rgba($black, .87);
 		background: $raised-button-background;
@@ -38,10 +38,12 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 		}
 
 		&:hover {
-			@extend .sm-z8;
-			background: $raised-button-background-hover;
-			//background-color: rgba($black, .12);
+			background: darken($raised-button-background-hover, 12%);
 			color: $raised-button-color;
+		}
+
+		&:active {
+			@extend .sm-z8;
 		}
 
 
@@ -87,7 +89,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 	}
 
 	&.sm-flat-button {
-		@include transition(all, 300ms);
+		@include transition(all 100ms ease-in-out);
 		color: $flat-button-color;
 		//color: rgba($black, .87);
 		background: none;
@@ -153,7 +155,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 button, a {
 	&.sm-floating-button {
 		@extend .sm-z6;
-		@include transition(all);
+		@include transition(all 100ms ease-in-out);
 		border-radius: 50%;
 		border: none;
 		outline: none;
