--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -1,28 +1,14 @@
-@mixin box-shadow($horizontal, $vertical, $blur, $spread, $color) {
+@mixin box-shadow($settings) {
 	// Mozilla
-	-moz-box-shadow: $horizontal $vertical, $blur, $spread, $color;
+	-moz-box-shadow: $settings;
 	// Chrome
-	-webkit-box-shadow: $horizontal $vertical, $blur, $spread, $color;
+	-webkit-box-shadow: $settings;
 	// IE / Edge
-	-ms-box-shadow: $horizontal $vertical, $blur, $spread, $color;
+	-ms-box-shadow: $settings;
 	// Opera
-	-o-box-shadow: $horizontal $vertical, $blur, $spread, $color;
+	-o-box-shadow: $settings;
 	// Normal
-	box-shadow: $horizontal $vertical, $blur, $spread, $color;
-}
-
-// Used for shadow depths
-@mixin multi-box-shadow($horizontal1, $vertical1, $blur1, $spread1, $color1, $horizontal2, $vertical2, $blur2, $spread2, $color2) {
-	// Mozilla
-	-moz-box-shadow: $horizontal1 $vertical1 $blur1 $spread1 $color1, $horizontal2 $vertical2 $blur2 $spread2 $color2;
-	// Chrome
-	-webkit-box-shadow: $horizontal1 $vertical1 $blur1 $spread1 $color1, $horizontal2 $vertical2 $blur2 $spread2 $color2;
-	// IE / Edge
-	-ms-box-shadow: $horizontal1 $vertical1 $blur1 $spread1 $color1, $horizontal2 $vertical2 $blur2 $spread2 $color2;
-	// Opera
-	-o-box-shadow: $horizontal1 $vertical1 $blur1 $spread1 $color1, $horizontal2 $vertical2 $blur2 $spread2 $color2;
-	// Normal
-	box-shadow: $horizontal1 $vertical1 $blur1 $spread1 $color1, $horizontal2 $vertical2 $blur2 $spread2 $color2;
+	box-shadow: $settings;
 }
 
 @mixin border-radius($radius) {
@@ -42,13 +28,43 @@
 	$directBlur: if($dp == 1, 3, $dp * 2) + unquote('px');
 	$directAlpha: (24 - decimal-round($dp / 10)) / 100;
 
-	@include multi-box-shadow(0, $ambientY, $ambientBlur, 0, rgba(0, 0, 0, $ambientAlpha), 0, $directY, $directBlur, 0, rgba(0, 0, 0, $directAlpha));
+	@include box-shadow(0 $ambientY $ambientBlur 0 rgba(0, 0, 0, $ambientAlpha) unquote(',') 0 $directY $directBlur 0 rgba(0, 0, 0, $directAlpha));
 }
 
-@mixin transition($property, $duration: 400ms, $timing-function : ease-in-out, $delay: 0ms) {
-	-webkit-transition: $property $duration $timing-function $delay;
-	-moz-transition: $property $duration $timing-function $delay;
-	-ms-transition: $property $duration $timing-function $delay;
-	-o-transition: $property $duration $timing-function $delay;
-	transition: $property $duration $timing-function $delay;
+@mixin transition($settings) {
+	-webkit-transition: $settings;
+	-moz-transition: $settings;
+	-ms-transition: $settings;
+	-o-transition: $settings;
+	transition: $settings;
+}
+
+@mixin transform($settings) {
+	-webkit-transform: $settings;
+	-moz-transform: $settings;
+	-ms-transform: $settings;
+	-o-transform: $settings;
+	transform: $settings;
+}
+
+@mixin animation($settings) {
+	-webkit-animation: $settings;
+	-moz-animation: $settings;
+	-ms-animation: $settings;
+	-o-animation: $settings;
+	animation: $settings;
+}
+
+@mixin keyframes($name) {
+	@-webkit-keyframes #{$name} {
+		@content;
+	}
+
+	@-moz-keyframes #{$name} {
+		@content;
+	}
+
+	@keyframes #{$name} {
+		@content;
+	}
 }
